testsuite/tests/indexed-types/should_fail/Overlap5.stderr

Overlap5.hs:8:3: error:
    Mismatched type name in type family instance.
      Expected: F
        Actual: G
    In the declaration for type family ‘F’
